etag3 errorhandling
